--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -1,6 +1,8 @@
 .app {
-  text-align: center;
-  padding: 0 24px;
+  /* text-align: center;
+  padding: 0 24px; */
+  width: 100vw;
+  height: 100vh;
 }
 
 .logo {
@@ -13,6 +15,11 @@
 .text {
   color: aqua;
   margin-top: 64px;
+}
+
+.bg {
+  width: 100%;
+  height: 100%;
 }
 
 .header {
