--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -29,6 +29,13 @@
   color: white;
 }
 
+.menu {
+  float: left;
+  width: 6rem;
+  height: 100vh;
+  background-color: #f5f5f9;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
