--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -36,6 +36,11 @@
   background-color: #f5f5f9;
 }
 
+.content {
+  float: left;
+  width: calc(100% - 6rem);
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
