--- a/src/components/card/index.less
+++ b/src/components/card/index.less
@@ -65,7 +65,7 @@
       .card-item-button {
         position: absolute;
         padding: 0;
-        right: 0;
+        right: 8px;
         top: 50%;
         margin-top: -1rem;
         height: 2rem;
