--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -23,10 +23,7 @@
 }
 
 .header {
-  padding-top: 30%;
-  background-color: #fff;
-  font-size: 40px;
-  color: white;
+  padding: 16px;
 }
 
 .menu {
