--- a/src/components/card/index.less
+++ b/src/components/card/index.less
@@ -53,7 +53,7 @@
 
         .card-item-price {
           font-size: 1rem;
-          color: #be1c17;
+          color: #ffbd30;
         }
 
         .card-item-num {
@@ -72,7 +72,7 @@
         width: 2rem;
         line-height: 2rem;
         border-radius: 2rem;
-        background-color: #be1c17;
+        background-color: #ffbd30;
         color: #fff;
       }
     }
