--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -6,9 +6,9 @@
     margin-right: .4rem;
     width: 4rem;
     height: 1.8rem;
-    border: 1px solid #be1c17;
+    border: 1px solid #ffbd30;
     border-radius: .8rem;
-    color: #be1c17;
+    color: #ffbd30;
     line-height: 1.8rem;
     font-size: 1rem;
     text-overflow: ellipsis;
@@ -16,7 +16,7 @@
   }
 
   .header-item-selected {
-    background-color: #be1c17;
+    background-color: #ffbd30;
     color: #fff;
   }
 }
