--- a/src/components/menu/index.less
+++ b/src/components/menu/index.less
@@ -23,7 +23,7 @@
       left: 0;
       height: 100%;
       width: 4px;
-      background-color: #be1c17;
+      background-color: #ffbd30;
     }
   }
 }
